# pressure-acquisition-system

./: .gitignore  .gitmodules  README.md
Firmware/esp32/: .gitignore  CMakeLists.txt  calculations.ipynb  partitions.csv  sdkconfig
Firmware/esp32/main/: CMakeLists.txt  main.c
Firmware/esp32/scripts/: test.py
Hardware/REV00/: All_boards.kicad_pcb  stencil.stl
Hardware/V1/: V1-cache.lib  V1.kicad_pcb  V1.sch  V1.sch-bak  fp-lib-table  sym-lib-table
Hardware/V2-charge-amp/: V2-charge-amp-cache.lib  V2-charge-amp.csv  V2-charge-amp.kicad_pcb  V2-charge-amp.kicad_pcb-bak  V2-charge-amp.pro  V2-charge-amp.sch  V2-charge-amp.sch-bak  V2-charge-amp.xml  fp-info-cache  sym-lib-table
Hardware/V2-main-board/: MainBoard.sch  V2-main-board-cache.lib  V2-main-board.csv  V2-main-board.kicad_pcb  V2-main-board.kicad_pcb-bak  V2-main-board.pro  V2-main-board.sch  V2-main-board.sch-bak  V2-main-board.xml  fp-lib-table  sym-lib-table
Hardware/comp-lib/: AC-Input.kicad_mod  AD8606ACBZ-REEL7.bck  AD8606ACBZ-REEL7.lib  Analog_ADC.lib  BGA8C50P3X3_177X143X67N.kicad_mod  BNC7T-J-P-HN-RA-BH1.stp  BNC_Header.kicad_mod  ESP32-WROVER-I.lib  GX16-5P.kicad_mod  UU9.8.kicad_mod  repo-qr-code.kicad_mod
Hardware/local-lib/footprints/: ACM3225-2P.kicad_mod  (+3 more)
Hardware/v1/: fp-info-cache  fp-lib-table  v1.kicad_pcb  v1.kicad_pcb-bak  v1.pro  v1.sch-bak
Software/: .gitignore  bleManager.py  compile_proto.sh  config.py  decorators.py  dsp.py  main.py  realTime.py  requirements.txt  style.css  tcpClient.py  trigger.py  triggerDev.ipynb
protobuf/: CMakeLists.txt  configuration.proto
(+20 files in other folders)
